--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -15,13 +15,15 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        submodules: true
 
     - name: Set up environment variables
       run: |
-        echo "SIGNALS_REPO=https://github.com/MotionSpell/signals.git" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "BUILD_DIR=C:/signals" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "ACTIONS_RUNNER_DEBUG=true" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-        echo "ACTIONS_STEP_DEBUG=true" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "SIGNALS_REPO=https://github.com/MotionSpell/signals.git" >> $GITHUB_ENV
+        echo "BUILD_DIR=C:/signals" >> $GITHUB_ENV
+        echo "ACTIONS_RUNNER_DEBUG=true" >> $GITHUB_ENV
+        echo "ACTIONS_STEP_DEBUG=true" >> $GITHUB_ENV
 
     - name: Setup MSYS2
       uses: msys2/setup-msys2@v2
@@ -37,34 +39,35 @@ jobs:
 
     - name: Set environment variables for MSYS2
       run: |
-        echo "C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        echo "C:\msys64\usr\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        echo "MSYSTEM=MINGW64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+        echo "C:\msys64\mingw64\bin" >> $GITHUB_PATH
+        echo "C:\msys64\usr\bin" >> $GITHUB_PATH
+        echo "MSYSTEM=MINGW64" >> $GITHUB_ENV
+      shell: bash
 
     - name: Initialize vcpkg submodule
-      shell: msys2 { bash -c }
       run: git submodule update --init --recursive
+      shell: bash
 
     - name: Bootstrap vcpkg
+      run: vcpkg/bootstrap-vcpkg.bat
       shell: cmd
-      run: .\vcpkg\bootstrap-vcpkg.bat
 
     - name: Clone the Signals repository
-      shell: msys2 { bash -c }
       run: git clone --recurse-submodules -b vcpkg-cmake $SIGNALS_REPO $BUILD_DIR
+      shell: bash
 
     - name: Update submodules
-      shell: msys2 { bash -c }
       run: cd $BUILD_DIR && git submodule update --remote vcpkg
+      shell: bash
 
     - name: Configure CMake
-      shell: msys2 { bash -c }
       run: cd $BUILD_DIR && cmake --preset mingw-production
+      shell: bash
 
     - name: Build the project
-      shell: msys2 { bash -c }
       run: cd $BUILD_DIR && cmake --build --preset mingw-production
+      shell: bash
 
     - name: Run tests
-      shell: msys2 { bash -c }
       run: cd $BUILD_DIR && ctest --output-on-failure
+      shell: bash
