--- a/.github/workflows/windows-build.yml
+++ b/.github/workflows/windows-build.yml
@@ -43,10 +43,17 @@ jobs:
           curl
         msystem: MINGW64  
 
+    - name: Set MSYS2 path
+      run: |
+        echo "C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        echo "C:\msys64\usr\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        echo "MSYSTEM=MINGW64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
+      shell: pwsh
+
     - name: Install dependencies for MINGW64
       run: |
-        pacman -Syu --noconfirm && \
-        pacman -S --noconfirm \
+        # Ensure pacman is available by using MSYS2 shell
+        C:/msys64/usr/bin/bash.exe -c "pacman -Syu --noconfirm && pacman -S --noconfirm \
         mingw-w64-x86_64-base-devel \
         mingw-w64-x86_64-pkg-config \
         mingw-w64-x86_64-yasm \
@@ -66,15 +73,8 @@ jobs:
         mingw-w64-x86_64-libtool \
         mingw-w64-x86_64-ca-certificates \
         mingw-w64-x86_64-linux-api-headers \
-        mingw-w64-x86_64-mingw-w64-toolchain
+        mingw-w64-x86_64-mingw-w64-toolchain"
       shell: bash
-
-    - name: Set MSYS2 path
-      run: |
-        echo "C:\msys64\mingw64\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        echo "C:\msys64\usr\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
-        echo "MSYSTEM=MINGW64" | Out-File -FilePath $env:GITHUB_ENV -Encoding utf8 -Append
-      shell: pwsh
 
     - name: Setup vcpkg
       run: |
