--- a/src/plugins/HlsDemuxer/CMakeLists.txt
+++ b/src/plugins/HlsDemuxer/CMakeLists.txt
@@ -24,7 +24,7 @@ target_include_directories(HlsDemuxer PRIVATE
 
 # Link the necessary libraries
 target_link_libraries(HlsDemuxer PRIVATE
-    media modules pipeline appcommon utils CURL::libcurl
+    media  pipeline appcommon utils CURL::libcurl
 )
 
 signals_install_plugin(HlsDemuxer ".smd")
