fix mac's cast run time error: explicitly casting  to the possible types. + adding parallel build on all platforms

--- a/.github/workflows/linux-build.yml
+++ b/.github/workflows/linux-build.yml
@@ -77,7 +77,7 @@ jobs:
     - name: Build the project
       run: |
         cd ${{ env.BUILD_DIR }} && \
-        cmake --build build --preset linux-production
+        cmake --build build --preset linux-production --parallel $(nproc)
 
     - name: Prepare test environment
       run: |
