--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -121,21 +121,34 @@ endif()
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
+# Create format target - BEFORE add_subdirectory(src)
+add_custom_target(format
+    COMMAND ${CMAKE_COMMAND} -E echo "Running reformat..."
+    COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/scripts/reformat.sh
+    WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+    COMMENT "Formatting source code..."
+)
 
 # Add all the source subdirectories
 add_subdirectory(src)
 
-# Add custom targets for easy builds
-add_custom_target(build_all
+# Make all targets depend on format
+add_dependencies(utils format)
+add_dependencies(modules format)
+add_dependencies(appcommon format)
+add_dependencies(pipeline format)
+add_dependencies(media format)
+add_dependencies(unittests format)
+
+# Add custom targets for easy builds - remove format from DEPENDS
+add_custom_target(build_all ALL
     DEPENDS
         utils
         appcommon
         pipeline
         modules
         media
-        plugins
         dashcastx
-        #ts2ip
         player
         mcastdump
         mp42tsx
