--- a/.github/workflows/mac-build.yml
+++ b/.github/workflows/mac-build.yml
@@ -35,7 +35,14 @@ jobs:
           autoconf \
           automake \
           libtool \
-          python3
+          python3 \
+          astyle
+    
+    - name: Install astyle on macOS
+      run: |
+        brew update
+        brew install astyle || brew reinstall astyle
+      shell: /bin/bash -e {0}
 
     - name: Initialize vcpkg submodule
       run: |
